objects/KB_Global_Search_History__c.object
<CustomObject>
    <label>KB Global Search History</label>
    <nameField>
        <label>KB Global Search History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KB Global Search History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Channels__c</fullName>
        <label>Channels</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Names__c</fullName>
        <label>Field Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_BatchId__c</fullName>
        <label>Apex Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <label>PublishStatus</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <label>Search String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Replacement_Log__c</fullName>
        <label>Replacement Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Articles_Updated__c</fullName>
        <label>Articles Updated</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Articles_Searched__c</fullName>
        <label>Articles Searched</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Articles_Selected__c</fullName>
        <label>Articles Selected</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublishNewVersion__c</fullName>
        <label>PublishNewVersion</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_String__c</fullName>
        <label>Replacement String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Replacement_Channels__c</fullName>
        <label>Replacement Channels</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Replacement_BatchId__c</fullName>
        <label>Apex Replacement Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>